finish for night

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,6 +34,32 @@
 
  </section>
  <!-- section 7 --> 
- 
+ <section class="banner7-container7">
+    <h2 class="banner7-text1">Meet Our Team</h2>
+    <div class="banner7-div">
+    <div class="person">
+       <img src="/images/person/pexels-pixabay-220453.jpg" alt="" srcset="" class="person-img"> 
+       <p class="person-text1">Jackson Parker</p>
+       <p class="person-text2">Manger</p>
+    </div>
+    <div class="person">
+       <img src="/images/person/pexels-justin-shaifer-1222271.jpg" alt="" srcset="" class="person-img"> 
+       <p class="person-text1">Noah Rodriguez</p>
+       <p class="person-text2">Production Manger</p>
+    </div>
+    <div class="person">
+       <img src="/images/person/pexels-daniel-xavier-1239291.jpg" alt="" srcset="" class="person-img"> 
+       <p class="person-text1">Lily Thompson</p>
+       <p class="person-text2">Designer</p>
+    </div>
+    <div class="person">
+       <img src="/images/person/pexels-andrea-piacquadio-762020.jpg" alt="" srcset="" class="person-img"> 
+       <p class="person-text1">Olivia Bennett</p>
+       <p class="person-text2">Designer</p>
+    </div>
+
+    </div>
+ </section>
+
 </body>
 </html>
