finish about us page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -60,6 +60,31 @@
 
     </div>
  </section>
+<!-- section 8 -->
+<p class="section8-text">Visit Our Store</p>
+<section class="section8-container8">
+     
+    <video src="/images/Flower shop(1080P_60FPS).mp4" controls  poster="/images/assortment-elegant-red-flowers.jpg" class="section8-video"></video>
+    <img src="/images/thread-161933457-6404962868974127564.png" alt="" srcset="" class="section8-pic">
 
+</section>
+<!-- footer-->
+<footer class="footer-container">
+    <div>
+     <h2 class="footer-text">Bloom <span class="footer-text2">Bouquet</span></h2>
+     <div class="social">
+       <img src="/images/icons8-facebook.gif" alt="" srcset="" class="logo">
+       <img src="/images/icons8-messenger.gif" alt="" srcset="" class="logo">
+       <img src="/images/icons8-twitter.gif" alt="" srcset="" class="logo">
+       <img src="/images/icons8-youtube.gif" alt="" srcset="" class="logo">
+     </div>
+     <address class="footer-add">Apt. 275 630 Zboncak Flat, Lake Reba, IN 58483-1558</address>
+     <p class="footer-email">fefimo9772@avucon.com</p>
+     <p class="footer-num">+447893920256</p>
+     <p class="footer-end">@2020-2023, Bloom Bouquet.com. All rights reserved</p>
+    </div>
+     
+
+   </footer>
 </body>
 </html>
