finish products page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloom Bouquet</title>
     <link rel="stylesheet" href="/Style/Homepage.css">
+    <link rel="shortcut icon" href="/images/icons8-spa-flower-64.png" type="image/x-icon">
 </head>
 <body>
     <!-- Navbar -->
@@ -16,10 +17,9 @@
             <div class="menus">
                 <h3><a href="/homepage.html" class="menu-item">Home</a></h3>
                 <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
-                <h3><a href="" class="menu-item">Service</a></h3>
+                <h3><a href="/Products.html" class="menu-item">Products</a></h3>
                 <h3><a href="" class="menu-item">Order</a></h3>
-                <h3><a href="" class="menu-item">Login</a></h3>
-                <h3><a href="" class="menu-item">Register</a></h3>
+              
             </div>
         </div>
     </nav>
@@ -62,10 +62,15 @@
  </section>
 <!-- section 8 -->
 <p class="section8-text">Visit Our Store</p>
-<section class="section8-container8">
+<section class="section8-section8">
      
     <video src="/images/Flower shop(1080P_60FPS).mp4" controls  poster="/images/assortment-elegant-red-flowers.jpg" class="section8-video"></video>
     <img src="/images/thread-161933457-6404962868974127564.png" alt="" srcset="" class="section8-pic">
+
+</section>
+<!-- section 9 -->
+<section class="section9-section9">
+    <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Comment" class="section9-comment"></textarea>
 
 </section>
 <!-- footer-->
