--- a/homepage.html
+++ b/homepage.html
@@ -19,10 +19,9 @@
             <div class="menus">
               <h3><a href="/homepage.html" class="menu-item">Home</a></h3>
               <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
-                <h3><a href="" class="menu-item">Service</a></h3>
+                <h3><a href="/Products.html" class="menu-item">products</a></h3>
                 <h3><a href="" class="menu-item">Order</a></h3>
-                <h3><a href="" class="menu-item">Login</a></h3>
-                <h3><a href="" class="menu-item">Register</a></h3>
+              
             </div>
         </div>
     </nav>
