finish order page

--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
               <h3><a href="/homepage.html" class="menu-item">Home</a></h3>
               <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
                 <h3><a href="/Products.html" class="menu-item">products</a></h3>
-                <h3><a href="" class="menu-item">Order</a></h3>
+                <h3><a href="/order.html" class="menu-item">Order</a></h3>
               
             </div>
         </div>
@@ -77,7 +77,7 @@
      <!-- Banner 5 section -->
      <section class="banner5-container5">
       <h1 class="banner5-text1">Instagram freed</h1>
-      <marquee behavior="scroll" direction="left" truespeed="100" scrolldelay="96">
+      <marquee behavior="scroll" direction="left" >
         <img src="/images/m/flower-56414_1920.jpg" alt="" srcset="" class="marquee-imgs">
         <img src="/images/m/flowers-174817_1920.jpg" alt="" srcset="" class="marquee-imgs">
         <img src="/images/m/flowers-19830_1920.jpg" alt="" srcset="" class="marquee-imgs">
