finish register page

--- a/homepage.html
+++ b/homepage.html
@@ -52,7 +52,7 @@
       <div>
         <p class="banner3-text1">Get 30% Off Now</p>
       <p class="banner3-text2">SAVE30 at checkout and treat yourself to incredible savings. Hurry, this limited-time deal won't last forever! Shop now and indulge in the joy of discounts!</p>
-    <button class="banner3-btn"> <a href="" class="banner3-text3">Register Now</a></button>
+    <button class="banner3-btn"> <a href="/register.html" class="banner3-text3">Register Now</a></button>
       
       </div>
 <div>
