finish the project

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,6 +19,7 @@
                 <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
                 <h3><a href="/Products.html" class="menu-item">Products</a></h3>
                 <h3><a href="/order.html" class="menu-item">Order</a></h3>
+                <p><img src="/images/pexels-spencer-selover-428364.jpg" alt="" srcset="" class="menu-pic"></p>
               
             </div>
         </div>
@@ -29,7 +30,7 @@
         <p class="banner6-text1">
             Bridging the gap between nature and human emotions, the flower business blossoms as a flourishing industry, cultivating connections and enhancing life's most significant milestones with the timeless beauty of blooms.
         </p>
-        <button type="button" class="banner6-btn"><a href="" class="banner6-text2">Login Now</a></button>
+        <button type="button" class="banner6-btn"><a href="/login.html" class="banner6-text2">Login Now</a></button>
     </div>
 
  </section>
