--- a/order.html
+++ b/order.html
@@ -19,6 +19,7 @@
               <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
                 <h3><a href="/Products.html" class="menu-item">products</a></h3>
                 <h3><a href="/order.html" class="menu-item">Order</a></h3>
+                <p><img src="/images/pexels-spencer-selover-428364.jpg" alt="" srcset="" class="menu-pic"></p>
               
             </div>
         </div>
