--- a/register.html
+++ b/register.html
@@ -19,6 +19,7 @@
                 <h3><a href="/aboutUs.html" class="menu-item">About us</a></h3>
                 <h3><a href="/Products.html" class="menu-item">Products</a></h3>
                 <h3><a href="/order.html" class="menu-item">Order</a></h3>
+                <p><img src="/images/pexels-spencer-selover-428364.jpg" alt="" srcset="" class="menu-pic"></p>
               
             </div>
         </div>
@@ -51,7 +52,9 @@
         <p class="banner13-text3">Accept our term and condition</p>
        </div>
         <input type="button" value="Register" class="banner13-btn">
+        <p class="banner14-text3">Already have an account please <a href="/login.html" class="banner14-text4">Login</a></p>
     </form>
+    
     <div>
         <img src="/images/WVR7.gif" alt="" srcset="" class="banner13-img">
        </div>
