--- a/homepage.html
+++ b/homepage.html
@@ -77,7 +77,7 @@
      </section>
      <!-- Banner 5 section -->
      <section class="banner5-container5">
-      <h1 class="banner5-text1">Instagram freed</h1>
+      <h1 class="banner5-text1">Instagram feed</h1>
       <marquee behavior="scroll" direction="left" >
         <img src="/images/m/flower-56414_1920.jpg" alt="" srcset="" class="marquee-imgs">
         <img src="/images/m/flowers-174817_1920.jpg" alt="" srcset="" class="marquee-imgs">
