--- a/register.html
+++ b/register.html
@@ -37,6 +37,12 @@
         </div>
         <div>
             <label for="">
+                <h1 class="banner13-text2">Image</h1>
+            </label>
+            <input type="file" class="banner13-int" required>
+        </div>
+        <div>
+            <label for="">
                 <h1 class="banner13-text2">Email</h1>
             </label>
             <input type="email" class="banner13-int" required>
